--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "sourceMap": true, /* Generates corresponding '.map' file. */
     // "outFile": "./dist/bundle.js", /* Concatenate and emit output to single file. */
     "outDir": "./dist", /* Redirect output structure to the directory. */
-    "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    // "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -64,5 +64,8 @@
     /* Advanced Options */
     "skipLibCheck": true, /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
