--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A small drag and drop project in typescript",
   "scripts": {
     "test": "exit 1",
-    "start": "lite-server",
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "keywords": [
@@ -19,6 +19,6 @@
     "typescript": "^4.1.5",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   }
 }
